# multi

./: .gitignore  README.md  pyproject.toml
src/youtube_multi/: cli.py
transcripts/: EcbgbKtOELY.txt
